# shell-deck

./: Cargo.toml  README.md  echo_test.txt
.sd/files/: cargo-build.sdf  my_ls.json  test-sd.json  test-sd.sdf
src/: args.rs  main.rs  sd_error.rs  sd_file.rs
