[package]
name = "shell-deck"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "sd"
# path = "src/main.rs"

[dependencies]
log = "0.4.20"
env_logger = "0.10.1"
regex = "1.10.2"
clap = { version = "4.4.12", features = ["derive"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
